refactor: moved logic from service to storage layer. Added additional validation on fields. Unified error handlers